--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,6 +12,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -20,7 +21,8 @@ android {
         }
 
         debug {
-            buildConfigField 'String', 'HOST_NAME', '\"http://192.168.10.4:9000\"'
+            //buildConfigField 'String', 'HOST_NAME', '\"http://192.168.10.4:9000\"'
+            buildConfigField 'String', 'HOST_NAME', '\"http://54.251.151.101:9000\"'
         }
     }
     compileOptions.incremental = false
@@ -78,6 +80,8 @@ dependencies {
 
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:support-vector-drawable:25.3.1'
     testCompile 'junit:junit:4.12'
 }
 
